[gd_scene load_steps=22 format=3 uid="uid://dfw7rfg20xi3r"]

[ext_resource type="PackedScene" uid="uid://cv8jqrdbbodjd" path="res://Scenes/Component/random_stream_player_2d_component.tscn" id="1_0s8s0"]
[ext_resource type="Script" path="res://Scenes/Game_Object/Bat_Enemy/bat_enemy.gd" id="1_ldirl"]
[ext_resource type="PackedScene" uid="uid://bv8nyyi5juhsa" path="res://Scenes/Component/health_component.tscn" id="2_58sjj"]
[ext_resource type="PackedScene" uid="uid://dpakoqqbwi0wr" path="res://Scenes/Component/velocity_component.tscn" id="3_4vo1v"]
[ext_resource type="AudioStream" uid="uid://seorsatm6vvt" path="res://Assets/Audio/SFX/footstep_carpet_000.ogg" id="3_fum02"]
[ext_resource type="PackedScene" uid="uid://d1h0pl2teir4u" path="res://Scenes/Component/hit_flash_component.tscn" id="4_7dpwm"]
[ext_resource type="AudioStream" uid="uid://bdf0u1mv4rwd7" path="res://Assets/Audio/SFX/footstep_carpet_001.ogg" id="4_bh0ec"]
[ext_resource type="Shader" path="res://Scenes/Component/hit_flash_component.gdshader" id="5_a73bl"]
[ext_resource type="AudioStream" uid="uid://56lwfj3xtyep" path="res://Assets/Audio/SFX/footstep_carpet_002.ogg" id="5_v1mg5"]
[ext_resource type="PackedScene" uid="uid://d183qaf53bq5" path="res://Scenes/Component/vial_drop_component.tscn" id="6_5tiy6"]
[ext_resource type="AudioStream" uid="uid://bgj5rcxcgmluc" path="res://Assets/Audio/SFX/footstep_carpet_003.ogg" id="6_hu13q"]
[ext_resource type="PackedScene" uid="uid://cyc1uct5x1ohn" path="res://Scenes/Component/death_component.tscn" id="7_630ir"]
[ext_resource type="AudioStream" uid="uid://5gdhurhtvx5d" path="res://Assets/Audio/SFX/footstep_carpet_004.ogg" id="7_ch6n2"]
[ext_resource type="Script" path="res://Scenes/Component/hurtbox_component.gd" id="8_kf231"]
[ext_resource type="Texture2D" uid="uid://b27c60u13o45n" path="res://Scenes/Game_Object/Bat_Enemy/bat.png" id="9_lcihn"]

[sub_resource type="Animation" id="Animation_crsa8"]
resource_name = "fly"
length = 0.4
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(2.14355, 1),
"update": 0,
"values": [Vector2(0, -6), Vector2(0, -11)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.0, 0.174533]
}

[sub_resource type="Animation" id="Animation_jyb2p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -6)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3klv5"]
_data = {
"RESET": SubResource("Animation_jyb2p"),
"fly": SubResource("Animation_crsa8")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x5elp"]
resource_local_to_scene = true
shader = ExtResource("5_a73bl")
shader_parameter/lerp_percent = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_htepl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_565j6"]
radius = 6.0

[node name="BatEnemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 8
collision_mask = 9
script = ExtResource("1_ldirl")
metadata/_edit_group_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fly"
libraries = {
"": SubResource("AnimationLibrary_3klv5")
}

[node name="RandomStreamPlayer2DComponent" parent="." instance=ExtResource("1_0s8s0")]
streams = Array[AudioStream]([ExtResource("3_fum02"), ExtResource("4_bh0ec"), ExtResource("5_v1mg5"), ExtResource("6_hu13q"), ExtResource("7_ch6n2")])

[node name="HealthComponent" parent="." instance=ExtResource("2_58sjj")]
max_health = 2.0

[node name="VelocityComponent" parent="." instance=ExtResource("3_4vo1v")]
move_speed = 90
acceleration = 0.75

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("4_7dpwm")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")
hit_flash_material = SubResource("ShaderMaterial_x5elp")

[node name="VialDropComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("6_5tiy6")]
experience_points = 2.0
health_component = NodePath("../HealthComponent")

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("7_630ir")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")

[node name="HurtboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
collision_layer = 0
collision_mask = 4
script = ExtResource("8_kf231")
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_htepl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_565j6")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
position = Vector2(0, -6)
texture = ExtResource("9_lcihn")
